syntax = "proto3";

package com.road.yishi.proto.player;

message TokenInfoMsg {
  int32 masterType = 1;
  int32 amount = 2;
  string expiredDate = 3;
}
