syntax = "proto3";

package com.road.yishi.proto.star;

message StarLockReqMsg {
  int32 starType = 1;
  int32 pos = 2;
}
