syntax = "proto3";

package com.road.yishi.proto.star;

message StarPickReqMsg {
  int32 dropsite = 1;
  int32 way = 2;
}
