syntax = "proto3";

package com.road.yishi.proto.star;

message StarRandReqMsg {
  int32 site = 1;
}
