syntax = "proto3";

package com.road.yishi.proto.star;

message StarShopMsg {
  int32 goodId = 1;
  int32 result = 2;
  int32 num = 3;
}
